--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="couple-clicks-cnt">
             <div class="couple-clicks-box G-justify-between">
                 <div class="couple-clicks-photo G-flex">
-                    <img src="./assets/img/couple-1.png" alt="image">
+                    <img src="./assets/img/couple-1.webp" alt="image">
                 </div>
                 <div class="couple-clicks-info">
                     <h3>Генерация постов</h3>
@@ -163,7 +163,7 @@
             </div>
             <div class="couple-clicks-box G-justify-between">
                 <div class="couple-clicks-photo G-flex">
-                    <img src="./assets/img/couple-2.png" alt="image">
+                    <img src="./assets/img/couple-2.webp" alt="image">
                 </div>
                 <div class="couple-clicks-info">
                     <h3>Создание изображений</h3>
@@ -196,7 +196,7 @@
             </div>
             <div class="couple-clicks-box G-justify-between">
                 <div class="couple-clicks-photo G-flex">
-                    <img src="./assets/img/couple-3.png" alt="image">
+                    <img src="./assets/img/couple-3.webp" alt="image">
                 </div>
                 <div class="couple-clicks-info">
                     <h3>Видео-контент</h3>
@@ -229,7 +229,7 @@
             </div>
             <div class="couple-clicks-box G-justify-between">
                 <div class="couple-clicks-photo G-flex">
-                    <img src="./assets/img/couple-4.png" alt="image">
+                    <img src="./assets/img/couple-4.webp" alt="image">
                 </div>
                 <div class="couple-clicks-info">
                     <h3>Работа с трендами</h3>
@@ -261,7 +261,7 @@
             </div>
             <div class="couple-clicks-box G-justify-between">
                 <div class="couple-clicks-photo G-flex">
-                    <img src="./assets/img/couple-5.png" alt="image">
+                    <img src="./assets/img/couple-5.webp" alt="image">
                 </div>
                 <div class="couple-clicks-info">
                     <h3>Автопостинг и аналитика</h3>
@@ -347,7 +347,7 @@
         <div class="specialists-cnt G-flex-wrap G-justify-center">
             <div class="specialists-box">
                 <div class="specialists-photo G-flex">
-                    <img src="./assets/img/specialist-1.jpg" alt="specialist">
+                    <img src="./assets/img/specialist-1.webp" alt="specialist">
                 </div>
                 <div class="specialists-description">
                     <h3>SMM-специалисты</h3>
@@ -358,7 +358,7 @@
             </div>
             <div class="specialists-box">
                 <div class="specialists-photo">
-                    <img src="./assets/img/specialist-2.jpg" alt="specialist">
+                    <img src="./assets/img/specialist-2.webp" alt="specialist">
                 </div>
                 <div class="specialists-description">
                     <h3>Бренд и бизнес</h3>
@@ -369,7 +369,7 @@
             </div>
             <div class="specialists-box">
                 <div class="specialists-photo">
-                    <img src="./assets/img/specialist-3.jpg" alt="specialist">
+                    <img src="./assets/img/specialist-3.webp" alt="specialist">
                 </div>
                 <div class="specialists-description">
                     <h3>Копирайтеры</h3>
@@ -380,7 +380,7 @@
             </div>
             <div class="specialists-box">
                 <div class="specialists-photo">
-                    <img src="./assets/img/specialist-4.jpg" alt="specialist">
+                    <img src="./assets/img/specialist-4.webp" alt="specialist">
                 </div>
                 <div class="specialists-description">
                     <h3>Маркетологи</h3>
@@ -391,7 +391,7 @@
             </div>
             <div class="specialists-box">
                 <div class="specialists-photo">
-                    <img src="./assets/img/specialist-5.jpg" alt="specialist">
+                    <img src="./assets/img/specialist-5.webp" alt="specialist">
                 </div>
                 <div class="specialists-description">
                     <h3>Блогеры и инфлюенсеры</h3>
@@ -408,7 +408,7 @@
                     <div class="swiper-slide">
                         <div class="specialists-box">
                             <div class="specialists-photo">
-                                <img src="./assets/img/specialist-1.jpg" alt="specialist">
+                                <img src="./assets/img/specialist-1.webp" alt="specialist">
                             </div>
                             <div class="specialists-description">
                                 <h3>SMM-специалисты</h3>
@@ -421,7 +421,7 @@
                     <div class="swiper-slide">
                         <div class="specialists-box">
                             <div class="specialists-photo">
-                                <img src="./assets/img/specialist-2.jpg" alt="specialist">
+                                <img src="./assets/img/specialist-2.webp" alt="specialist">
                             </div>
                             <div class="specialists-description">
                                 <h3>Бренд и бизнес</h3>
@@ -434,7 +434,7 @@
                     <div class="swiper-slide">
                         <div class="specialists-box">
                             <div class="specialists-photo">
-                                <img src="./assets/img/specialist-3.jpg" alt="specialist">
+                                <img src="./assets/img/specialist-3.webp" alt="specialist">
                             </div>
                             <div class="specialists-description">
                                 <h3>Копирайтеры</h3>
@@ -447,7 +447,7 @@
                     <div class="swiper-slide">
                         <div class="specialists-box">
                             <div class="specialists-photo">
-                                <img src="./assets/img/specialist-4.jpg" alt="specialist">
+                                <img src="./assets/img/specialist-4.webp" alt="specialist">
                             </div>
                             <div class="specialists-description">
                                 <h3>Маркетологи</h3>
@@ -460,7 +460,7 @@
                     <div class="swiper-slide">
                         <div class="specialists-box">
                             <div class="specialists-photo">
-                                <img src="./assets/img/specialist-5.jpg" alt="specialist">
+                                <img src="./assets/img/specialist-5.webp" alt="specialist">
                             </div>
                             <div class="specialists-description">
                                 <h3>Блогеры и инфлюенсеры</h3>
@@ -493,7 +493,7 @@
                         <div class="reviews-cards">
                             <div class="G-justify-between G-align-start">
                                 <div class="reviews-cards-user G-align-center">
-                                    <img src="./assets/img/reviews-1.png" alt="reviews">
+                                    <img src="./assets/img/reviews-1.webp" alt="reviews">
                                     <div class="reviews-cards-name">
                                         <h4>Михаил Кутузов</h4>
                                         <small>Предприниматель</small>
@@ -510,7 +510,7 @@
                         <div class="reviews-cards">
                             <div class="G-justify-between G-align-start">
                                 <div class="reviews-cards-user G-align-center">
-                                    <img src="./assets/img/reviews-2.png" alt="reviews">
+                                    <img src="./assets/img/reviews-2.webp" alt="reviews">
                                     <div class="reviews-cards-name">
                                         <h4>Евгения Смирнова</h4>
                                         <small>SMM-специалист</small>
@@ -527,7 +527,7 @@
                         <div class="reviews-cards">
                             <div class="G-justify-between G-align-start">
                                 <div class="reviews-cards-user G-align-center">
-                                    <img src="./assets/img/reviews-3.png" alt="reviews">
+                                    <img src="./assets/img/reviews-3.webp" alt="reviews">
                                     <div class="reviews-cards-name">
                                         <h4>Яна Дунайцева</h4>
                                         <small>Блогер</small>
@@ -544,7 +544,7 @@
                         <div class="reviews-cards">
                             <div class="G-justify-between G-align-start">
                                 <div class="reviews-cards-user G-align-center">
-                                    <img src="./assets/img/reviews-4.png" alt="reviews">
+                                    <img src="./assets/img/reviews-4.webp" alt="reviews">
                                     <div class="reviews-cards-name">
                                         <h4>Алексей Соколов</h4>
                                         <small>Контент-менеджер</small>
@@ -561,7 +561,7 @@
                         <div class="reviews-cards">
                             <div class="G-justify-between G-align-start">
                                 <div class="reviews-cards-user G-align-center">
-                                    <img src="./assets/img/reviews-5.png" alt="reviews">
+                                    <img src="./assets/img/reviews-5.webp" alt="reviews">
                                     <div class="reviews-cards-name">
                                         <h4>Павел Волков</h4>
                                         <small>Видеомейкер</small>
@@ -578,7 +578,7 @@
                         <div class="reviews-cards">
                             <div class="G-justify-between G-align-start">
                                 <div class="reviews-cards-user G-align-center">
-                                    <img src="./assets/img/reviews-6.png" alt="reviews">
+                                    <img src="./assets/img/reviews-6.webp" alt="reviews">
                                     <div class="reviews-cards-name">
                                         <small>Диана Свиридова</small>
                                         <p>Копирайтер</p>
@@ -595,7 +595,7 @@
                         <div class="reviews-cards">
                             <div class="G-justify-between G-align-start">
                                 <div class="reviews-cards-user G-align-center">
-                                    <img src="./assets/img/reviews-7.png" alt="reviews">
+                                    <img src="./assets/img/reviews-7.webp" alt="reviews">
                                     <div class="reviews-cards-name">
                                         <small>Ярослава Шокова</small>
                                         <p>Маркетолог</p>
@@ -612,7 +612,7 @@
                         <div class="reviews-cards">
                             <div class="G-justify-between G-align-start">
                                 <div class="reviews-cards-user G-align-center">
-                                    <img src="./assets/img/reviews-8.png" alt="reviews">
+                                    <img src="./assets/img/reviews-8.webp" alt="reviews">
                                     <div class="reviews-cards-name">
                                         <small>Ольга Новикова</small>
                                         <p>Владелец онлайн-школы</p>
