--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <img src="./assets/img/user-5.png" alt="user">
                     <img src="./assets/img/user-6.png" alt="user">
                     <img src="./assets/img/user-7.png" alt="user">
-                    <div class="reaches-more-users G-center">3к+</div>
+                    <div class="reaches-more-users G-center"><span>3к+</span></div>
                 </div>
             </div>
             <div class="reaches-box">
@@ -83,11 +83,11 @@
                 </p>
                 <div class="reels-views G-align-end G-justify-between">
                     <div class="reels-views-count G-align-center">
-                        <i class="icon-eye"></i>
+                        <img src="./assets/img/icon/icon-eye.svg" alt="eye">
                         <span>1,3 млн</span>
                     </div>
                     <div class="reels-views-diagram G-flex">
-                        <img src="./assets/img/pinkpntra.png" alt="diagram">
+                        <img src="./assets/img/pinkpntra.svg" alt="diagram">
                     </div>
                 </div>
             </div>
@@ -130,7 +130,9 @@
         </div>
         <div class="couple-clicks-cnt">
             <div class="couple-clicks-box G-justify-between">
+
                 <div class="couple-clicks-photo G-flex">
+                    <a href="#" class="btn-arrow G-center"><i class="arrow-top-right"></i></a>
                     <img src="./assets/img/couple-1.webp" alt="image">
                 </div>
                 <div class="couple-clicks-info">
@@ -141,19 +143,19 @@
                     <div class="couple-clicks-item G-justify-between G-align-end">
                         <div class="couple-clicks-name G-flex-wrap">
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips.svg" alt="chips">
                                 <span>Готовые посты</span>
                             </div>
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips.svg" alt="chips">
                                 <span>Кликабельные заголовки</span>
                             </div>
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips.svg" alt="chips">
                                 <span>Описание для постов</span>
                             </div>
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips.svg" alt="chips">
                                 <span>Вовлечение аудитории</span>
                             </div>
                         </div>
@@ -163,6 +165,7 @@
             </div>
             <div class="couple-clicks-box G-justify-between">
                 <div class="couple-clicks-photo G-flex">
+                    <a href="#" class="btn-arrow G-center"><i class="arrow-top-right"></i></a>
                     <img src="./assets/img/couple-2.webp" alt="image">
                 </div>
                 <div class="couple-clicks-info">
@@ -173,19 +176,19 @@
                     <div class="couple-clicks-item G-justify-between G-align-end">
                         <div class="couple-clicks-name G-flex-wrap">
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips-2.svg" alt="chips">
                                 <span>Идеи для креативов</span>
                             </div>
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips-2.svg" alt="chips">
                                 <span>Баннеры для рекламы</span>
                             </div>
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips-2.svg" alt="chips">
                                 <span>Инфографика</span>
                             </div>
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips-2.svg" alt="chips">
                                 <span>Аватары для соц. сетей</span>
                             </div>
                         </div>
@@ -196,6 +199,8 @@
             </div>
             <div class="couple-clicks-box G-justify-between">
                 <div class="couple-clicks-photo G-flex">
+                    <a href="#" class="btn-arrow G-center"><i class="arrow-top-right"></i></a>
+
                     <img src="./assets/img/couple-3.webp" alt="image">
                 </div>
                 <div class="couple-clicks-info">
@@ -207,19 +212,19 @@
                     <div class="couple-clicks-item G-justify-between G-align-end">
                         <div class="couple-clicks-name G-flex-wrap">
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips-3.svg" alt="chips">
                                 <span>Сторис с эффектами</span>
                             </div>
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips-3.svg" alt="chips">
                                 <span>Промо-видео</span>
                             </div>
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips-3.svg" alt="chips">
                                 <span>Reels для Instagram</span>
                             </div>
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips-3.svg" alt="chips">
                                 <span>Анимационные ролики</span>
                             </div>
                         </div>
@@ -229,6 +234,8 @@
             </div>
             <div class="couple-clicks-box G-justify-between">
                 <div class="couple-clicks-photo G-flex">
+                    <a href="#" class="btn-arrow G-center"><i class="arrow-top-right"></i></a>
+
                     <img src="./assets/img/couple-4.webp" alt="image">
                 </div>
                 <div class="couple-clicks-info">
@@ -239,19 +246,19 @@
                     <div class="couple-clicks-item G-justify-between G-align-end">
                         <div class="couple-clicks-name G-flex-wrap">
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips-4.svg" alt="chips">
                                 <span>Вирусные челленджи</span>
                             </div>
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips-4.svg" alt="chips">
                                 <span>Актуальная инфографика</span>
                             </div>
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips-4.svg" alt="chips">
                                 <span>Трендовые обзоры</span>
                             </div>
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips-4.svg" alt="chips">
                                 <span>Обзоры актуальных тем</span>
                             </div>
                         </div>
@@ -261,6 +268,7 @@
             </div>
             <div class="couple-clicks-box G-justify-between">
                 <div class="couple-clicks-photo G-flex">
+                    <a href="#" class="btn-arrow G-center"><i class="arrow-top-right"></i></a>
                     <img src="./assets/img/couple-5.webp" alt="image">
                 </div>
                 <div class="couple-clicks-info">
@@ -271,19 +279,19 @@
                     <div class="couple-clicks-item G-justify-between G-align-end">
                         <div class="couple-clicks-name G-flex-wrap">
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips-5.svg" alt="chips">
                                 <span>Анализ аудитории</span>
                             </div>
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips-5.svg" alt="chips">
                                 <span>Планирование контент-календаря</span>
                             </div>
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips-5.svg" alt="chips">
                                 <span>Оптимизация рекламы</span>
                             </div>
                             <div class="clicks-item-box G-align-center">
-                                <img src="./assets/img/icon/Icon-chips.svg" alt="chips">
+                                <img src="./assets/img/icon/chips-5.svg" alt="chips">
                                 <span>Отчёты по эффективности</span>
                             </div>
                         </div>
